# PhystechTasks

./: cpu.c  main.c  stack.c  stack.h  tests.c  translator.c  translator.h
Akinator/: README.md  akinator.c  akinator.h  base.txt  dump.txt  filemaster.c  filemaster.h  game.c  game.h  main.c  newBase.txt  stack.c  stack.h  tests.c
Hamlet/: Hamlet.txt  functions.c  functions.h  main.c  random.c  test.c  testin.txt  testout.txt  textin.txt  textout.txt
HashTable/: README.md
HashTable/src/: CMakeLists.txt  FileMaster.c  FileMaster.h  HashFuncs.c  HashFuncs.h  HashTable.c  HashTable.h  HashTest.c  HashTest.h  LinkedList .c  LinkedList .h  LinkedList.c  LinkedList.h  Unit-Test.c  Unit-Test.h  main.c
List/: HTMLdump.html  LogicalDump.txt  Makefile  Makefile.txt  PhysicalDump.txt  list.c  list.h  list.html  list.js  main.c  test.c  text.html
Onegin/: main.c  sorted.txt  tests.c  tests.txt  text.txt
ProtectedStack/: break.c  main.c  stack.c
Solver/: Differentiator.c  Differentiator.h  dump.txt  filemaster.c  filemaster.h  functions.h  main.c  memes.h  random.c  report.tex  simplifications.h  texmaster.c  texmaster.h  treemaster.c  treemaster.h
miniCPU/: Makefile  Makefile.txt  checker.c  checker.h  commands.h  cpu.c  cpu.h  enum.h  filemaster.c  filemaster.h  in.txt  main.c  out.asm  out.txt  prog_demo.asm  prog_demo.txt  prog_helloWorld.asm  prog_helloWorld.txt  prog_qquation.asm  prog_sqr.asm  prog_sqr.txt  qequation.asm  random.c  retranslated.txt  retranslator.c  retranslator.h  stack.c  stack.h  string.c  string.h  testin.txt  tests.c  translator.c  (+1 more)
